# hh_data_extraction_and_database_loading

./: LICENSE  README.md  areas.json  best_employers_2022.json  database_manager.py  dictionaries.py  employers_ids_all.json  hh_api_client.py  industries.py  main.py  population.py  professional_roles.py  pyproject.toml  userinterface.py  utils.py  webscraper.py
